fixed incorrect text alignment in content item on the Eco News page

--- a/src/app/component/eco-news/components/news-list/news-list-gallery-view/news-list-gallery-view.component.scss
+++ b/src/app/component/eco-news/components/news-list/news-list-gallery-view/news-list-gallery-view.component.scss
@@ -75,7 +75,6 @@ div {
         font-size: 14px;
         line-height: 21px;
         color: var(--secondary-dark-grey);
-        white-space: pre-wrap;
       }
     }
 
